--- a/SantanderDevWeek2023.ipynb
+++ b/SantanderDevWeek2023.ipynb
@@ -67,12 +67,12 @@
       "source": [
         "# Utilize sua própria URL se quiser ;)\n",
         "# Repositório da API: https://github.com/digitalinnovationone/santander-dev-week-2023-api\n",
-        "sdw2023_api_url = 'https://sdw-2023-prd.up.railway.app/'"
+        "sdw2023_api_url = 'https://sdw-2023-prd.up.railway.app'"
       ],
       "metadata": {
         "id": "FKqLC_CWoYqR"
       },
-      "execution_count": 56,
+      "execution_count": 102,
       "outputs": []
     },
     {
@@ -88,10 +88,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": 103,
       "metadata": {
         "id": "NYydpX_GLRCB",
-        "outputId": "22a579c4-296f-4340-c56e-533395eee07c",
+        "outputId": "69be83fa-d0c6-46b8-8f99-f37a370f00ff",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -131,15 +131,176 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8271604a-1c1b-4f14-a87e-01ecd88bd030"
+        "outputId": "8389cfc5-47fb-4e4d-a61a-944396d88474"
       },
-      "execution_count": 69,
+      "execution_count": 109,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[]\n"
+            "[\n",
+            "  {\n",
+            "    \"id\": 4566,\n",
+            "    \"name\": \"Bruno Pereira\",\n",
+            "    \"account\": {\n",
+            "      \"id\": 4843,\n",
+            "      \"number\": \"000111-2\",\n",
+            "      \"agency\": \"4321\",\n",
+            "      \"balance\": 0.0,\n",
+            "      \"limit\": 10000.0\n",
+            "    },\n",
+            "    \"card\": {\n",
+            "      \"id\": 4430,\n",
+            "      \"number\": \"**** **** 7532 2231\",\n",
+            "      \"limit\": 5000.0\n",
+            "    },\n",
+            "    \"features\": [\n",
+            "      {\n",
+            "        \"id\": 1416,\n",
+            "        \"icon\": \"string\",\n",
+            "        \"description\": \"string\"\n",
+            "      }\n",
+            "    ],\n",
+            "    \"news\": [\n",
+            "      {\n",
+            "        \"id\": 8593,\n",
+            "        \"icon\": \"string\",\n",
+            "        \"description\": \"string\"\n",
+            "      },\n",
+            "      {\n",
+            "        \"id\": 8624,\n",
+            "        \"icon\": \"https://digitalinnovationone.github.io/santander-dev-week-2023-api/icons/credit.svg\",\n",
+            "        \"description\": \"Investir no SANTANDER\"\n",
+            "      },\n",
+            "      {\n",
+            "        \"id\": 8625,\n",
+            "        \"icon\": \"https://digitalinnovationone.github.io/santander-dev-week-2023-api/icons/credit.svg\",\n",
+            "        \"description\": \"Bruno, investir \\u00e9 mais que economizar, \\u00e9 ampliar seu patrim\\u00f4nio e garantir uma seguran\\u00e7a futura. Investe j\\u00e1!\"\n",
+            "      }\n",
+            "    ]\n",
+            "  },\n",
+            "  {\n",
+            "    \"id\": 4567,\n",
+            "    \"name\": \"Joaquim Pereira\",\n",
+            "    \"account\": {\n",
+            "      \"id\": 4844,\n",
+            "      \"number\": \"000222-2\",\n",
+            "      \"agency\": \"4321\",\n",
+            "      \"balance\": 0.0,\n",
+            "      \"limit\": 5000.0\n",
+            "    },\n",
+            "    \"card\": {\n",
+            "      \"id\": 4431,\n",
+            "      \"number\": \"**** **** 7532 3378\",\n",
+            "      \"limit\": 1000.0\n",
+            "    },\n",
+            "    \"features\": [\n",
+            "      {\n",
+            "        \"id\": 1417,\n",
+            "        \"icon\": \"string\",\n",
+            "        \"description\": \"string\"\n",
+            "      }\n",
+            "    ],\n",
+            "    \"news\": [\n",
+            "      {\n",
+            "        \"id\": 8594,\n",
+            "        \"icon\": \"string\",\n",
+            "        \"description\": \"string\"\n",
+            "      },\n",
+            "      {\n",
+            "        \"id\": 8626,\n",
+            "        \"icon\": \"https://digitalinnovationone.github.io/santander-dev-week-2023-api/icons/credit.svg\",\n",
+            "        \"description\": \"Investir no SANTANDER\"\n",
+            "      },\n",
+            "      {\n",
+            "        \"id\": 8627,\n",
+            "        \"icon\": \"https://digitalinnovationone.github.io/santander-dev-week-2023-api/icons/credit.svg\",\n",
+            "        \"description\": \"Ol\\u00e1 Joaquim! Investir \\u00e9 essencial para aumentar seu patrim\\u00f4nio e garantir seguran\\u00e7a financeira. Pense nisso!\"\n",
+            "      }\n",
+            "    ]\n",
+            "  },\n",
+            "  {\n",
+            "    \"id\": 4568,\n",
+            "    \"name\": \"Maria Aparecida Pereira\",\n",
+            "    \"account\": {\n",
+            "      \"id\": 4845,\n",
+            "      \"number\": \"000333-2\",\n",
+            "      \"agency\": \"4321\",\n",
+            "      \"balance\": 0.0,\n",
+            "      \"limit\": 10000.0\n",
+            "    },\n",
+            "    \"card\": {\n",
+            "      \"id\": 4432,\n",
+            "      \"number\": \"**** **** 7532 4554\",\n",
+            "      \"limit\": 6000.0\n",
+            "    },\n",
+            "    \"features\": [\n",
+            "      {\n",
+            "        \"id\": 1418,\n",
+            "        \"icon\": \"string\",\n",
+            "        \"description\": \"string\"\n",
+            "      }\n",
+            "    ],\n",
+            "    \"news\": [\n",
+            "      {\n",
+            "        \"id\": 8595,\n",
+            "        \"icon\": \"string\",\n",
+            "        \"description\": \"string\"\n",
+            "      },\n",
+            "      {\n",
+            "        \"id\": 8628,\n",
+            "        \"icon\": \"https://digitalinnovationone.github.io/santander-dev-week-2023-api/icons/credit.svg\",\n",
+            "        \"description\": \"Investir no SANTANDER\"\n",
+            "      },\n",
+            "      {\n",
+            "        \"id\": 8629,\n",
+            "        \"icon\": \"https://digitalinnovationone.github.io/santander-dev-week-2023-api/icons/credit.svg\",\n",
+            "        \"description\": \"Maria, investir te permite crescer financeiramente, realizar sonhos e ter seguran\\u00e7a futura. Vamos come\\u00e7ar?\"\n",
+            "      }\n",
+            "    ]\n",
+            "  },\n",
+            "  {\n",
+            "    \"id\": 4569,\n",
+            "    \"name\": \"Heloisa Pereira\",\n",
+            "    \"account\": {\n",
+            "      \"id\": 4846,\n",
+            "      \"number\": \"000444-2\",\n",
+            "      \"agency\": \"4321\",\n",
+            "      \"balance\": 0.0,\n",
+            "      \"limit\": 5000.0\n",
+            "    },\n",
+            "    \"card\": {\n",
+            "      \"id\": 4433,\n",
+            "      \"number\": \"**** **** 7532 5566\",\n",
+            "      \"limit\": 2000.0\n",
+            "    },\n",
+            "    \"features\": [\n",
+            "      {\n",
+            "        \"id\": 1419,\n",
+            "        \"icon\": \"string\",\n",
+            "        \"description\": \"string\"\n",
+            "      }\n",
+            "    ],\n",
+            "    \"news\": [\n",
+            "      {\n",
+            "        \"id\": 8596,\n",
+            "        \"icon\": \"string\",\n",
+            "        \"description\": \"string\"\n",
+            "      },\n",
+            "      {\n",
+            "        \"id\": 8630,\n",
+            "        \"icon\": \"https://digitalinnovationone.github.io/santander-dev-week-2023-api/icons/credit.svg\",\n",
+            "        \"description\": \"Investir no SANTANDER\"\n",
+            "      },\n",
+            "      {\n",
+            "        \"id\": 8631,\n",
+            "        \"icon\": \"https://digitalinnovationone.github.io/santander-dev-week-2023-api/icons/credit.svg\",\n",
+            "        \"description\": \"Heloisa, investir \\u00e9 crescer! D\\u00ea asas ao seu patrim\\u00f4nio, planeje seu futuro financeiro conosco.\"\n",
+            "      }\n",
+            "    ]\n",
+            "  }\n",
+            "]\n"
           ]
         }
       ]
@@ -162,12 +323,12 @@
       ],
       "metadata": {
         "id": "O--PCAObTQkK",
-        "outputId": "7233eeef-586f-4bec-9ec1-cca45ce7c04e",
+        "outputId": "1b3e1ae4-2b31-46c5-9add-4314ae8b0d45",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 59,
+      "execution_count": 110,
       "outputs": [
         {
           "output_type": "stream",
@@ -204,12 +365,12 @@
         "# Link direto: https://platform.openai.com/account/api-keys\n",
         "\n",
         "# Substitua o texto TODO por sua API Key da OpenAI, ela será salva como uma variável de ambiente.\n",
-        "openai_api_key = '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'"
+        "openai_api_key = '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'"
       ],
       "metadata": {
         "id": "sUB1doiDTX3y"
       },
-      "execution_count": 60,
+      "execution_count": 114,
       "outputs": []
     },
     {
@@ -221,7 +382,7 @@
         "\n",
         "def generate_ai_news(user):\n",
         "  completion = openai.ChatCompletion.create(\n",
-        "    model=\"gpt-3.5-turbo\",\n",
+        "    model=\"gpt-4\",\n",
         "    messages=[\n",
         "      {\n",
         "          \"role\": \"system\",\n",
@@ -248,18 +409,18 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d63995d0-0df6-4da7-82a6-6f376736579b"
+        "outputId": "1f1444e5-a4eb-43e7-fd10-c6918c87b2aa"
       },
-      "execution_count": 91,
+      "execution_count": 115,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Clientes são a base do Santander. Cuidamos de você, sempre!\n",
-            "Joaquim, você é essencial para o sucesso do Banco Santander! #valorizamosnossosclientes\n",
-            "Maria Aparecida, você é fundamental para o sucesso do Santander! Conte conosco para todas as suas necessidades financeiras.\n",
-            "Você é essencial para nós no Banco Santander!\n"
+            "Bruno, no Santander, valorizamos cada cliente como a peça essencial para nossa visão de crescimento e sucesso.\n",
+            "Joaquim, sua fidelidade faz do Santander um banco mais forte. Sua escolha nos impulsiona a melhorar sempre!\n",
+            "Maria Aparecida, você é vital para o Santander. Sua confiança expande nossos horizontes. Obrigado pela parceria!\n",
+            "Heloisa, no Santander, clientes são nosso tesouro. Sua confiança é nosso maior ativo!\n"
           ]
         }
       ]
@@ -291,17 +452,18 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b0c06200-e14e-4cce-901f-a85ea3eb2830"
+        "outputId": "38c7be4f-91b3-416e-8c8a-8a06c2615550"
       },
-      "execution_count": null,
+      "execution_count": 116,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "User Pyterson updated? True!\n",
-            "User Pip updated? True!\n",
-            "User Pep updated? True!\n"
+            "User Bruno Pereira updated? True!\n",
+            "User Joaquim Pereira updated? True!\n",
+            "User Maria Aparecida Pereira updated? True!\n",
+            "User Heloisa Pereira updated? True!\n"
           ]
         }
       ]
